whoami/powpow/03-ingress-nginx.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-nginx
  namespace: whoami
  annotations:
    hub.traefik.io/access-control-policy: "my-acp@whoami"
spec:
  ingressClassName: nginx-k8s
  rules:
    - host: whoami.nginx.hubdemo.demo.traefiklabs.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami-traefik
                port:
                  number: 80
