whoami/powpow/03-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: app-powpow-tls
  namespace: whoami
  annotations:
    hub.traefik.io/enable-acme: "true"
    hub.traefik.io/access-control-policy: "my-acp@whoami"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`app.hubdemo.demo.traefiklabs.tech`)
      services:
        - name: whoami-traefik
          port: 80
    - kind: Rule
      match: Host(`app.hubdemo.demo.traefiklabs.tech`)
      services:
        - name: whoami-traefik
          port: 80
    - kind: Rule
      match: Host(`app.hubdemo.demo.traefiklabs.tech`)
      services:
        - name: whoami-traefik
          port: 80
    - kind: Rule
      match: Host(`app.hubdemo.demo.traefiklabs.tech`)
      services:
        - name: whoami-traefik
          port: 80
    - kind: Rule
      match: Host(`app.hubdemo.demo.traefiklabs.tech`)
      services:
        - name: whoami-traefik
          port: 80
    - kind: Rule
      match: Host(`app.hubdemo.demo.traefiklabs.tech`)
      services:
        - name: whoami-traefik
          port: 80
    - kind: Rule
      match: Host(`app.hubdemo.demo.traefiklabs.tech`)
      services:
        - name: whoami-traefik
          port: 80
    - kind: Rule
      match: Host(`app.hubdemo.demo.traefiklabs.tech`)
      services:
        - name: whoami-traefik
          port: 80
    - kind: Rule
      match: Host(`app.hubdemo.demo.traefiklabs.tech`)
      services:
        - name: whoami-traefik
          port: 80
  tls:
    secretName: app-tls
